--- a/modalDirective.html
+++ b/modalDirective.html
@@ -1,17 +1,17 @@
 ﻿
 
-<div ng-controller="myController" class="col-md-8" style="height:500px;">
+<div class="col-md-6" style="height:450px;">
     <!--<script type="text/ng-template" id="myModalContent.html">-->
-        <div class="modal-header" style="height:50px;">
-            <h3 class="modal-title">Add {{searchMap}}</h3>
+        <!--<div class="modal-header" style="height:50px;">
+            <!--<h3 class="modal-title">Add {{searchMap}}</h3>-->
+        <!-->-->
+        <div class="modal-body col-md-12" style="height:450px;">
+            <div new-entry class="col-md-12" style="height:350px;"></div>
         </div>
-        <div class="modal-body searchLocal col-md-12" style="height:450px;">
-            <div ng-controller="myController" new-entry class="col-md-12" style="height:350px;"></div>
-        </div>
-        <div class="modal-footer col-md-12">
-            <button class="btn btn-primary" type="button" ng-click="ok()">Add Company</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-        </div>
+        <!--<div class="modal-footer col-md-12">
+            <button class="btn btn-primary" id="ok" type="button" remove-modal ng-click="ok()">Add Company</button>
+            <button class="btn btn-warning" id="cancel" type="button" remove-modal ng-click="cancel()">Cancel</button>
+        </div>-->
     <!--</script>-->
 
     <!--<button type="button" class="btn btn-default" ng-click="open()">Open me!</button>-->
