--- a/serviceComment.html
+++ b/serviceComment.html
@@ -31,10 +31,10 @@
                         </div>
                         <div class="row">
                             <div class="form-group col-sm-6">
-                                <input type="submit" style="background-color:#c9e1c9" class=" btn form-control" removeservice-modal ng-click="ok()" value="Add"/>
+                                <input type="submit" style="background-color:#c9e1c9" class=" btn form-control" ng-click="ok()" value="Add"/>
                             </div>   
                             <div class="form-group col-sm-6">
-                                <button class="btn btn-warning form-control" removeservice-modal ng-click="cancel()">Cancel</button>
+                                <button class="btn btn-warning form-control" ng-click="cancel()">Cancel</button>
                             </div>
                         </div>
                        
