--- a/modalService.html
+++ b/modalService.html
@@ -4,15 +4,15 @@
 
 
 <div class="row">
-    <div class="modal-body col-md-12" style="height:500px;">
-        <div class="col-md-12" style="height:495px">
-            <div class="panel panel-success" id="modalpanel" style="height:490px;">
+    <div class="modal-body col-md-12" style="height:400px;">
+        <div class="col-md-12" style="height:395px">
+            <div class="panel panel-success" id="modalpanel" style="height:390px;">
                 <div class="panel-heading" role="tab" id="headingA">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseA" aria-expanded="true" aria-controls="collapseA">
-                            Add Comment for <span>{{service.Name}}</span>
+                            <strong>Add Comment for</strong> <span>{{modalTitle}}</span>
                         </a>
-                        <span ng-click="cancel()" remove-modal style="float:right">x</span>
+                        <span ng-click="cancel()" remove-modal style="float:right"><strong>x</strong></span>
                     </h4>
                 </div>
                 <div id="collapseA" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingA">
@@ -21,30 +21,30 @@
                         <!--<span class="col-md-7 serviceRating" style="height:50px;float:right;"></span>-->
                         <!--<div style="height:30px;float:right;"><p><a id="openFormNewCreation" ng-href="#commentPublishPanelDiv" ng-click="openFormOld()"><font color="green"><i class="fa fa-comment-o"></i> Add a Comment</font></a></p></div>-->
                         <div class="row">
-                            <div class="col-sm-12" style="background-color:#dff0d8;height:450px;">
+                            <div class="col-xs-12" style="background-color:#dff0d8;height:350px;">
                                 <form name="userFormModal" ng-submit="userFormModalSubmit()">
 
-                                    <div class="row" style="margin-top:35px;">
-                                        <div class="form-group col-sm-12">
+                                    <div class="row" style="margin-top:13px;">
+                                        <div class="form-group col-xs-12">
                                             <div class="row">
-                                                <div class="col-sm-12" id="rateYoDemo"></div>
+                                                <div class="col-xs-12" id="rateYoDemo"></div>
                                             </div>
                                             <!--<input-stars ng-controller="myController" max="5" class="form-control" icon-full="fa-star" icon-base="fa fa-fw" icon-empty="fa-star-o" ng-model="globe.last_value_user_modal" ></input-stars>-->
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="form-group col-sm-12">
+                                        <div class="form-group col-xs-12">
                                             <!-- <label>Add Comment:</label>-->
-                                            <textarea type="text" class="form-control" ng-model="userCommentOldModal" rows="15" placeholder="comment..."></textarea>
+                                            <textarea type="text" class="form-control" ng-model="userCommentOldModal" rows="10" placeholder="comment..."></textarea>
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="form-group col-sm-6">
-                                            <button style="background-color:#c9e1c9;color:darkgreen;" class="btn  form-control" ng-click="cancel()">Cancel</button>
+                                        <div class="form-group col-xs-6">
+                                            <button style="background-color:#c9e1c9;color:darkgreen;margin-bottom:-40px;margin-top:-10px;" class="btn  form-control" ng-click="cancel()"><strong>Cancel</strong></button>
 
                                          </div>
-                                        <div class="form-group col-sm-6">
-                                            <button href="#" type="submit" class=" btn btn-warning form-control" ng-href="#" ng-click="ok()">Add</button>
+                                        <div class="form-group col-xs-6">
+                                            <button href="#" type="submit" class=" btn btn-warning form-control" ng-href="#" ng-click="ok()" style="margin-bottom:-40px;margin-top:-10px;"><strong>Add</strong></button>
 
                                          </div>
                                     </div>
